fix collapse

--- a/src/app/components/info-page/info-page.component.scss
+++ b/src/app/components/info-page/info-page.component.scss
@@ -1,3 +1,17 @@
 .cursor {
     cursor: pointer;
 }
+
+.card-block {
+    position: relative;
+}
+
+.close {
+    position: absolute;
+    top: 1%;
+    right: 1%;
+}
+
+.collapsed-td {
+    border: 0;
+}
